# WeatherApp

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  release.yml  reviewers.yml
.github/workflows/: command-dispatch.yml  delete-branch.yml  dependabot-pr.yml  docker-build.yml  formatting.yml  main.yml
config/: .env.sample  config.hcl  hypercorn.toml  nginx.conf  prometheus.yml  promtail.yml  robots.txt
docker/: .env.sample
docker/dev/: Dockerfile.dev  compose-oa.yml  compose.yml
docker/release/: Dockerfile  compose-oa.yml  compose.yml
scripts/start/: run.bat  run.ps1  run.sh
scripts/tools/cache/: clear_cache.bat  clear_cache.ps1  clear_cache.sh
src/: __init__.py  main.py
src/app/core/api/main/routes/: __init__.py  main.py
src/app/core/api/v1/routes/: __init__.py  services.py
src/app/core/connectors/config/: __init__.py  client.py
src/app/core/connectors/db/redis/: __init__.py  client.py
src/app/core/connectors/db/sql/: __init__.py  connector.py  models.py  repositories.py
src/app/core/connectors/logging/: __init__.py  client.py  formatters.py
src/app/core/connectors/secrets/: __init__.py  client.py
src/app/core/decorators/: __init__.py  auth.py  cache.py  log.py
src/app/core/handlers/: __init__.py  errors.py
src/app/core/metrics/: __init__.py  metrics.py
src/app/core/middlewares/: __init__.py  logging.py  request_params.py  session.py
src/app/core/models/: __init__.py  history.py  weather.py
src/app/core/utils/: __init__.py  base.py  log.py  weather.py
src/app/core/views/: __init__.py  home.py
src/app/frontend/static/css/: style.css
src/app/frontend/static/js/: script.js
src/app/frontend/templates/: index.html
tests/: .env.test  conftest.py
tests/functional/: test_ping.py  test_routes.py
tests/unit/: test_log_utils.py
